--- a/sass/main.sass
+++ b/sass/main.sass
@@ -138,76 +138,83 @@ body
 	line-height: 4rem
 	background-color: #fff
 	margin-top: 0
-	padding-left: 1rem
+	padding-left: 20px
 	box-shadow: -1px 1px 3px #ccc
 
 .hentry
 	margin-bottom: 20px
 	width: 100%
 
-
-.tax-brand, .page
+.single-portfolio
 	.single-project-content
-		position: relative
-		background-color: #FFF
-		width: 100%
-		height: 100%
-		box-shadow: -1px 1px 3px #ccc
-		a
-			text-decoration: none
-			color: $text-color
-	a.project-link
-		height: 100%
-		width: 100%
+		padding-left: 20px !important
+		padding-top: 20px
+
+.single-project-content
+	position: relative
+	background-color: #fff
+	width: 100%
+	height: 100%
+	box-shadow: -1px 1px 3px #ccc
+	a
+		text-decoration: none
+		color: $text-color
+
+.span-type-work
+	position: relative
+	&::before
+		content: '-'
+		position: absolute
+		top: 0
+		left: -12px
+		line-height: 1rem
+
+a.project-link
+	height: 100%
+	width: 100%
+	position: relative
+	display: block
+	transition: background-color .25s linear
+	.project-thumb
 		position: relative
 		display: block
+		height: 60%
+		width: 100%
+		overflow: hidden
+		&::after
+			content: ''
+			position: absolute
+			top: 0
+			left: 0
+			width: 100%
+			height: 100%
+			background-color: rgba(#000, .2)
+			z-index: 2
+			transition: background-color .25s linear
+	&:hover
+		background-color: rgba(#ccc, .3)
 		transition: background-color .25s linear
 		.project-thumb
-			position: relative
-			display: block
-			height: 60%
-			width: 100%
-			overflow: hidden
 			&::after
-				content: ''
-				position: absolute
-				top: 0
-				left: 0
-				width: 100%
-				height: 100%
-				background-color: rgba(#000, .2)
-				z-index: 2
+				background-color: rgba(#000, .3)
 				transition: background-color .25s linear
-		&:hover
-			background-color: rgba(#ccc, .3)
-			transition: background-color .25s linear
-			.project-thumb
-				&::after
-					background-color: rgba(#000, .3)
-					transition: background-color .25s linear
-	.project-description
-		position: relative
-		padding: 0.5rem 1rem 0
-		//padding-top: 0.5rem
-		height: 40%
+.project-description
+	position: relative
+	padding: 0.5rem 1rem 0
+	//padding-top: 0.5rem
+	height: 40%
 
-	.entry-title
-		margin: 0
-		min-height: 3rem
-		font-size: 1rem
+.entry-title
+	margin: 0
+	min-height: 3rem
+	font-size: 1rem
 
-	.entry-content
-		margin-top: 0.5rem
-		font-size: 0.8rem
-
-.single-portfolio-box
-	background: #fff
-	padding-left: 10px
-	box-sizing: border-box
-	margin-left: 20px
+.entry-content
+	margin-top: 0.5rem
+	font-size: 0.8rem
 
 .project-info
-	margin-left: 10px
+	padding-left: 20px
 	width: 100%
 
 .list-title
